@@ -13,8 +13,10 @@
     fault). (Christoph M. Becker)
   . Fixed bug #69781 (phpinfo() reports Professional Editions of Windows
     7/8/8.1/10 as "Business"). (Christian Wenz)
-  . Fixes bug #69835 (phpinfo() does not report many Windows SKUs).
+  . Fixed bug #69835 (phpinfo() does not report many Windows SKUs).
     (Christian Wenz)
+  . Fixed bug #69892 (Different arrays compare indentical due to integer key
+    truncation). (Nikita)
 
 - GD:
   . Fixed bug #61221 (imagegammacorrect function loses alpha channel). (cmb)
